# aurex-10.04

aurex-artwork/debian/: aurex-boot-theme.install  aurex-boot-theme.postinst  aurex-boot-theme.prerm  aurex-gdm-theme.install  aurex-gdm-theme.links  aurex-gdm-theme.postinst  aurex-gdm-theme.prerm  aurex-gnome-theme.install  aurex-gnome-theme.postinst  aurex-gnome-theme.prerm  aurex-icon-theme.dirs  aurex-icon-theme.install  aurex-icon-theme.postinst  aurex-icon-theme.prerm  aurex-plymouth-theme.docs  aurex-plymouth-theme.install  aurex-plymouth-theme.links  aurex-plymouth-theme.postinst  aurex-plymouth-theme.prerm  aurex-translive.theme  aurex-ubiquity-theme.install  aurex-ubiquity-theme.postinst  aurex-ubiquity-theme.prerm  aurex-wallpaper-theme.install  aurex-wallpaper-theme.links  changelog  control  copyright  rules  wallpaper.xml.in  wallpapers-bottom.xml
aurex-artwork/grub/: aurex-10.04-grub.xcf
aurex-artwork/space-sunrise/: README  build.sh  record.sh  space-sunrise-logo.script  space-sunrise.plymouth  space-sunrise.script  test.sh
aurex-artwork/wallpapers/: aurex-droplet-gdm.xcf  aurex-droplet-katosu.xcf  aurex-golden-ratio.xcf
aurex-gnome-theme/debian/: aurex-grub-theme.dirs  aurex-grub-theme.install  aurex-icon-theme.install  aurex-icon-theme.postinst  changelog  control  copyright  rules  wallpapers-top.xml
aurex-gnome-theme/grub/: aurex-10.04-grub.xcf
aurex-gnome-theme/wallpapers/: aurex-fractal.xcf  aurex-golden-ratio.xcf
aurex-grub-theme/debian/: changelog  control  copyright  postinst  prerm
aurex-notify/debian/: changelog  control  copyright  install
aurex-openvpn/debian/: aurex-openvpn-nm.install  aurex-openvpn-nm.postinst  aurex-openvpn-nm.prerm  changelog  control  copyright
cups-usercode/debian/: README.Debian  changelog  control  copyright  postinst  prerm
flashplugin-transitional/debian/: changelog  control  rules
glassfish/.org.opensolaris,pkg/: disabled_auth
glassfish/debian/: changelog  control  copyright  glassfish-server.dirs  glassfish-server.init  glassfish-server.install  glassfish-server.postinst  glassfish-server.prerm  glassfish-tool  rules
gtk-bamboo-zen-theme/debian/: changelog  control  copyright  rules
meta/: README  aurex-desktop-amd64  aurex-desktop-i386  aurex-desktop-recommends-amd64  aurex-desktop-recommends-i386  aurex-inf-i386  aurex-meta.conf  aurex-minimal-amd64  aurex-minimal-i386  aurex-standard-amd64  aurex-standard-i386  aurex-supported-amd64  aurex-supported-i386  debootstrap-version  desktop-i386  desktop-recommends-amd64  desktop-recommends-i386  firefox-unstable.list  metapackage-map  pkg_cache_tool  standard-amd64  update-lists  update-metapackages  update-seeds  update-sources  update-tool  update.cfg.in
meta/aurex-chroot/: packages.pkg  sources.list
meta/debian/: aurex-desktop.lintian-overrides  aurex-minimal.lintian-overrides  aurex-standard.lintian-overrides  changelog  control  copyright  rules  ubuntu-desktop.lintian-overrides  ubuntu-minimal.lintian-overrides  ubuntu-standard.lintian-overrides
meta/filter-lists/: debootstrap-amd64.pkgs  debootstrap-i386.pkgs  full-list-amd64.bulk  full-list-i386.bulk  full-list.bulk
meta/sources/: archive-zentyal-sources.list  aurex-sources.list  aurex-sources.list.in  dropbox-sources.list  local-ppa-firefox-sources.list.in  local-ppa-firefox-sources.list.in.disable  oracle-virtualbox-sources.list  ppa-bisigi-gtk-themes-sources.list  ppa-faenza-icons-sources.list  ppa-firefox-stable-sources.list  ppa-flash64b-sevenmachines-sources.list  ppa-libreoffice-sources.list  ppa-libvirt-sources.list  ppa-libvirt-sources.list.disable  ppa-opera-browser-sources.list  ubuntu-sources.list  (+7 more)
nagios-virt/: .cvsignore  INSTALL  MANIFEST  Makefile.in  README  check_virt  config.h.in  configure  configure.ac  nagios-virt.c  virt-library.cfg
nagios-virt/debian/: USAGE  changelog  control  copyright  rules
session-cmd/: depends
transmute/: luis.txt
(+440 files in other folders)
